# skills-manager

./: README.md  angular.json  build_check.bat  dev.bat  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  installer.rs  lib.rs  parser.rs  scanner.rs
src/app/: app.routes.ts  app.ts
src/app/core/models/: skill.model.ts
src/app/core/services/: skills.service.ts
src/app/features/dashboard/: dashboard.component.ts
src/app/features/help/: help.component.ts
src/app/features/marketplace/: marketplace.component.ts
src/app/features/settings/: settings.component.ts
src/app/features/skill-detail/: skill-detail.component.ts
src/app/features/skills-list/: skills-list.component.ts
