[package]
name = "skills-manager"
version = "0.1.0"
description = "A visual Skills Manager built with Angular + Tauri + SQLite"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
